--- a/src/App.css
+++ b/src/App.css
@@ -237,6 +237,12 @@
     0 0 20px #f97316;
 }
 
+@media (max-width: 768px) {
+  .asteroid {
+    display: none;
+  }
+}
+
 .asteroid-trail {
   position: absolute;
   bottom: 50%;
